# SDL2DShmup

./: .gitignore  CMakeLists.txt  README.md
Source/: Entity.h  RenderedEntity.cpp  RenderedEntity.h  app.h  defs.h  draw.cpp  draw.h  enums.h  init.cpp  init.h  input.cpp  input.h  main.cpp  math.cpp  math.h  stage.cpp  stage.h  structs.h
